# candle

./: Cargo.toml
candle-core/src/metal_backend/: mod.rs
candle-lora/: Cargo.toml
candle-lora/src/: lib.rs  lora_backend.rs  lora_cpu.rs  lora_metal.rs  qwen3.rs
candle-metal-kernels/src/metal_src/: indexing.metal
candle-nn/src/: kv_cache.rs
candle-transformers/src/: lib.rs
candle-transformers/src/models/: mod.rs  quantized_qwen3.rs  qwen3.rs  qwen3_moe.rs
